--- a/css/force-directed.css
+++ b/css/force-directed.css
@@ -9,11 +9,18 @@ body {
   margin: 2em auto 4em auto;
 }
 
+h1 {
+  font-size: 64px;
+  font-weight: 300;
+  letter-spacing: -2px;
+  margin: .3em 0 .1em 0;
+}
+
 #tooltip { 
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     position: absolute;              
-    padding: 3px 5px;    
-    font: 12px sans-serif;    
+    padding: 2px 3px;    
+    font: 10px sans-serif;    
     background: white; 
     border: 1px solid grey;    
     border-radius: 4px;     
@@ -25,4 +32,19 @@ body {
 #tooltip p { 
   margin: 0px;
   padding: 0px;
+}
+
+line {
+  stroke: grey;
+  stroke-opacity: 0.3;
+}
+
+circle {
+  stroke: black;
+  stroke-width: 1px;
+}
+
+.highlight {
+  stroke: red;
+  stroke-width: 2px;
 }
