--- a/css/force-directed.css
+++ b/css/force-directed.css
@@ -44,8 +44,14 @@ circle {
   stroke-opacity: 0.6;
 }
 
+.fixed {
+  stroke: black;
+}
+
 .highlight {
   stroke: red;
   stroke-width: 2px;
   stroke-opacity: 0.6;
 }
+
+
